[gd_scene load_steps=13 format=3 uid="uid://bfq1af5py0rqe"]

[ext_resource type="Script" path="res://Scripts/Elementos Ventanas/BotonesMoverArchivos.gd" id="1_w7tn2"]
[ext_resource type="Texture2D" uid="uid://c4lo25y8ltr37" path="res://Sprites/Fondos/9x9.png" id="2_5fboy"]
[ext_resource type="Texture2D" uid="uid://d262roc802vji" path="res://Sprites/Botones/BotorCopiar.png" id="2_hhr20"]
[ext_resource type="Texture2D" uid="uid://cub6v4pbdjd88" path="res://Sprites/Botones/BotorCopiar2.png" id="3_kpbcr"]
[ext_resource type="Texture2D" uid="uid://dlw82w3rdjrs6" path="res://Sprites/Botones/botonCortar.png" id="4_1g8fw"]
[ext_resource type="Texture2D" uid="uid://bxmq4qml1p7sa" path="res://Sprites/Botones/botonBorrar2 (1).png" id="4_75gjd"]
[ext_resource type="Texture2D" uid="uid://df6qc0o83384v" path="res://Sprites/Botones/botonBorrar (1).png" id="4_l5h82"]
[ext_resource type="Texture2D" uid="uid://dwuwc2lswem04" path="res://Sprites/Botones/botonCortar2.png" id="5_m4vrs"]
[ext_resource type="Texture2D" uid="uid://odlrpw3rwg2y" path="res://Sprites/Botones/botonPegar.png" id="6_fajqo"]
[ext_resource type="Texture2D" uid="uid://vu756461ssgb" path="res://Sprites/Botones/botonPegar2.png" id="7_3ks8t"]

[sub_resource type="Theme" id="Theme_p3t1i"]
MarginContainer/constants/margin_bottom = 4
MarginContainer/constants/margin_left = 4
MarginContainer/constants/margin_right = 4
MarginContainer/constants/margin_top = 3

[sub_resource type="Theme" id="Theme_5dt8f"]
MarginContainer/constants/margin_bottom = 4
MarginContainer/constants/margin_left = 4
MarginContainer/constants/margin_right = 4
MarginContainer/constants/margin_top = 4

[node name="Portapapeles" type="PanelContainer"]
texture_filter = 1
custom_minimum_size = Vector2(104, 0)
offset_right = 40.0
offset_bottom = 40.0
size_flags_vertical = 4
theme = SubResource("Theme_p3t1i")
script = ExtResource("1_w7tn2")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
modulate = Color(0.647059, 0.815686, 0.839216, 1)
custom_minimum_size = Vector2(104, 10)
layout_mode = 2
texture = ExtResource("2_5fboy")
patch_margin_left = 1
patch_margin_right = 1
patch_margin_bottom = 1
axis_stretch_vertical = 2

[node name="HBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(104, 0)
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="Copiar" type="MarginContainer" parent="HBoxContainer"]
clip_contents = true
layout_mode = 2
theme = SubResource("Theme_5dt8f")

[node name="BotonCopiar" type="TextureButton" parent="HBoxContainer/Copiar"]
custom_minimum_size = Vector2(96, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_hhr20")
texture_pressed = ExtResource("3_kpbcr")
stretch_mode = 5

[node name="Cortar" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="BotonCortar" type="TextureButton" parent="HBoxContainer/Cortar"]
custom_minimum_size = Vector2(96, 32)
layout_mode = 2
texture_normal = ExtResource("4_1g8fw")
texture_pressed = ExtResource("5_m4vrs")
stretch_mode = 5

[node name="Pegar" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="BotonPegar" type="TextureButton" parent="HBoxContainer/Pegar"]
layout_mode = 2
texture_normal = ExtResource("6_fajqo")
texture_pressed = ExtResource("7_3ks8t")
stretch_mode = 5

[node name="Borrar" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="BotonBorrar" type="TextureButton" parent="HBoxContainer/Borrar"]
layout_mode = 2
texture_normal = ExtResource("4_l5h82")
texture_pressed = ExtResource("4_75gjd")
stretch_mode = 5

[connection signal="pressed" from="HBoxContainer/Copiar/BotonCopiar" to="." method="_on_boton_copiar_pressed"]
[connection signal="pressed" from="HBoxContainer/Cortar/BotonCortar" to="." method="_on_boton_cortar_pressed"]
[connection signal="pressed" from="HBoxContainer/Pegar/BotonPegar" to="." method="_on_boton_pegar_pressed"]
